# FinAgent

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run.py
agent/: agent.py  memory.py  tools.py  utils.py
app/: celery.py  settings.py  urls.py
chat/: apps.py  views.py
stock/: apps.py  models.py  serializers.py  tasks.py  views.py
stock/migrations/: 0001_initial.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
